--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build.js",
   "scripts": {
     "dist": "webpack -p",
-    "start": "node build.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,11 @@
     "babel-loader": "6.2.3",
     "babel-preset-es2015": "6.5.0",
     "babel-preset-react": "6.5.0",
+    "babel-preset-stage-0": "6.5.0",
+    "express": "4.13.4",
     "react": "0.14.7",
     "react-dom": "0.14.7",
+    "swig": "1.4.2",
     "webpack": "1.12.13"
   }
 }
