--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wheres-walle",
   "version": "1.0.0",
   "description": "Picture flipping game for children and first React.js project to advance skills - this a client-side game - no cheating please :D",
-  "main": "build.js",
+  "main": "index.js",
   "scripts": {
     "dist": "webpack -p",
     "start": "node app.js"
@@ -25,6 +25,7 @@
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
     "express": "4.13.4",
+    "radium": "0.16.6",
     "react": "0.14.7",
     "react-dom": "0.14.7",
     "swig": "1.4.2",
