--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "babel": "6.5.2",
     "babel-core": "6.5.2",
     "babel-loader": "6.2.3",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.5.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
+    "babel-preset-stage-1": "6.5.0",
     "express": "4.13.4",
     "radium": "0.16.6",
     "react": "0.14.7",
